grammar.js
    source_file: ($) => repeat($._top),

    _top: ($) =>
      choice(
        $.function_definition,
        $.param,
        $.global,
        $.exec,
        $.require,
        $.type_alias,
        $.namespace,
      ),

    exec: ($) =>
      seq(
        "exec",
        field("pex_name", $.identifier),
        parens_tuple(field("pex_mem", $.range)),
      ),

    range: ($) =>
      seq(field("ptr", $.int_literal), ":", field("size", $.int_literal)),
    // ------

    // global ------
    global: ($) =>
      seq(
        field("type", $.type),
        field("name", $.identifier),
        "=",
        field("value", $._gepxr),
        ";",
      ),

    _gepxr: ($) =>
      choice($._expr, seq("{", rtuple1($._expr), "}"), $.string_literal),
    // ------

    // param ------
    _expr: ($) =>
      choice(
        $.identifier,
        $.index_expr,
        $.true,
        $.false,
        $.int_literal,
        $.mem_access,
        $.pack_expr,
        $.cast_expr,
        $.unary_expr,
        $.bin_expr,
        $.parens_expr,
        $.call_expr,
        $.intrinsic_expr,
        $.ternary_expr,
      ),
    // ------

    // left values ------
    _instr: ($) => seq(repeat($.annotations), $._instr_r),

    _fun_def_start: ($) =>
      seq(
        field("annot", repeat($.annotations)),
        field("call_convention", optional($.call_conv)),
        "fn",
      ),

    function_definition: ($) =>
      seq(
        $._fun_def_start,
        field("name", $.identifier),
        field("args", parens_tuple($.param_decl)),
        field("return_type", optional(seq("->", tuple($._annot_stor_type)))),
        field("body", $.function_body),
      ),

    call_conv: (_) => choice("export", "inline"),

    return_statement: ($) => seq("return", tuple($.identifier), ";"),

    function_body: ($) =>
      choice(braces(seq(repeat($._instr), optional($.return_statement)))),

    param_decl: ($) =>
      seq(
        field("annotations", repeat($.annotations)),
        field(
          "declarations",
          seq(
            field("type", $._stor_type),
            field(
              "variables",
              repeat1(
                choice(
                  field("var", alias($.identifier, $.parameter)),
                  seq(
                    field("var", alias($.identifier, $.parameter)),
                    "=",
                    field("default_value", $._expr),
                  ),
                ),
              ),
            ),
          ),
        ),
      ),

    _pointer: ($) => seq(optional($._writable), "ptr"),

    _decl: ($) =>
      choice(
        field("v", alias($.identifier, $.variable)),
        seq(
          field("v", alias($.identifier, $.variable)),
          "=",
          field("e", $._expr),
        ),
      ),

    var_decl: ($) =>
      seq(
        field("type", $._stor_type),
        field("variables", sep1($._decl, optional(","))),
      ),

    storage: ($) =>
      choice(
        seq("reg", optional($._pointer)),
        seq("stack", optional($._pointer)),
        "inline",
        "global",
      ),

    _annot_stor_type: ($) =>
      seq(
        field("annotations", repeat($.annotations)),
        field("storage_type", $._stor_type),
      ),

    _stor_type: ($) => seq(field("storage", $.storage), field("type", $.type)),
    // ------

    // annotations ------
    annotations: ($) =>
      choice(
        seq("#", $._annotation),
        seq("#", brackets(commaSep($._annotation))),
      ),

    _annotation: ($) => seq($._annotation_label, optional($._attribute)),

    _utype: (_) => /(u8|u16|u32|u64|u128|u256)/,

    _arr_type: ($) =>
      seq(
        field("type", alias(choice($._utype, $.identifier), $.array_type)),
        brackets(field("len", $._expr)),
      ),

    _bool_type: (_) => "bool",
    _int_type: (_) => "int",

    type: ($) =>
      choice(
        $._bool_type,
        $._int_type,
        $._utype,
        $._arr_type,
        alias($.identifier, "alias"),
      ),
    // ------

    int_literal: (_) => token(intLiteral),

    string_literal: ($) =>
      seq(
        '"',
        repeat(
          choice(
            alias(token.immediate(prec(1, /[^\\"\n]+/)), $.string_content),
            $.escape_sequence,
          ),
        ),
        '"',
      ),

    identifier: (_) => /[a-zA-Z_][a-zA-Z0-9_]*(::([a-zA-Z_][a-zA-Z0-9_]*))*/,
